plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    // VisibleForTesting용
    implementation 'com.google.guava:guava:32.1.1-jre'

    runtimeOnly 'com.h2database:h2'

    // SQL Logger
    implementation 'p6spy:p6spy:3.9.1'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // API 테스트용 라이브러리
    testImplementation 'io.rest-assured:rest-assured:5.3.1'

}

tasks.named('test') {
    useJUnitPlatform()
}
